# src/main/java/com/im/message/app/resources/UserResource.java
@@ -5,9 +5,11 @@ import com.im.message.app.model.entities.User;
 public class UserResource {
 
     private Long id;
+    private String userName;
 
     public UserResource(User user) {
         id = user.getId();
+        userName = user.getUserName();
     }
 
     public Long getId() {
@@ -16,5 +18,13 @@ public class UserResource {
 
     public void setId(Long id) {
         this.id = id;
+    }
+
+    public String getUserName() {
+        return userName;
+    }
+
+    public void setUserName(String userName) {
+        this.userName = userName;
     }
 }
